--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>gaming site</title>
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/responsive.css">
 </head>
 <body>
     <!-- header section start -->
