online games section complete

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         <section class="banner">
             <div class="banner-content">
                 <h2>Play Like The</h2>
-                <h1 class="primary-text-color">G.O.A.T.</h1>
-                <p>1-Click instant play</p>
-                <p>No Download</p>
-                <p>1000s of supported online games</p>
+                <h1 class="gradient-color">G.O.A.T.</h1>
+                <p class="primary-p-color">1-Click instant play</p>
+                <p class="primary-p-color">No Download</p>
+                <p class="primary-p-color">1000s of supported online games</p>
                 <div class="banner-content-btn">
                     <button id="sing-in-btn">Sign In</button>
                     <button id="go-rogue-btn">Go Rogue</button>
@@ -51,6 +51,51 @@
 
         </section>
     </header>
+    <!-- main section start -->
+    <main>
+        <section class="online-games">
+            <div class="online-title-text">
+                <h1>Online Games <span class="gradient-color">Funny Videos</span></h1>
+                <p class="primary-p-color">A Collection of Hilarious Videos to Brighten Your Day</p>
+            </div>
+            <div class="online-games-box-container">
+                <div class="single-games-box hover-style">
+                    <img src="images/Rectangle 4.png" alt="">
+                    <div class="box-color"></div>
+                    <div class="play-btn">
+                        <img src="images/play.png" alt="">
+                        <p>Watch Now</p>
+                    </div>
+                </div>
+                <div class="single-games-box">
+                    <img src="images/Rectangle 5.png" alt="">
+                    <div class="box-color"></div>
+                    <div class="play-btn">
+                        <img src="images/play.png" alt="">
+                        <p>Watch Now</p>
+                    </div>
+                </div>
+                <div class="single-games-box">
+                    <img src="images/Rectangle 7.png" alt="">
+                    <div class="box-color"></div>
+                    <div class="play-btn">
+                        <img src="images/play.png" alt="">
+                        <p>Watch Now</p>
+                    </div>
+                </div>
+                <div class="single-games-box">
+                    <img src="images/Rectangle 6.png" alt="">
+                    <div class="box-color"></div>
+                    <div class="play-btn">
+                        <img src="images/play.png" alt="">
+                        <p>Watch Now</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+    </main>
 
     
 </body>
