--- a/index.html
+++ b/index.html
@@ -53,50 +53,134 @@
     </header>
     <!-- main section start -->
     <main>
-        <section class="online-games">
+        <section class="online-games hide">
             <div class="online-title-text">
                 <h1>Online Games <span class="gradient-color">Funny Videos</span></h1>
                 <p class="primary-p-color">A Collection of Hilarious Videos to Brighten Your Day</p>
             </div>
             <div class="online-games-box-container">
-                <div class="single-games-box hover-style">
+                <div class="single-games-box medium-screen">
                     <img src="images/Rectangle 4.png" alt="">
                     <div class="box-color"></div>
                     <div class="play-btn">
-                        <img src="images/play.png" alt="">
+                        <img src="images/play-button 1.svg" alt="">
                         <p>Watch Now</p>
                     </div>
+                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
                 </div>
-                <div class="single-games-box">
+                <div class="single-games-box medium-screen">
                     <img src="images/Rectangle 5.png" alt="">
                     <div class="box-color"></div>
                     <div class="play-btn">
-                        <img src="images/play.png" alt="">
-                        <p>Watch Now</p>
+                        <img src="images/play-button 1.svg" alt="">
+                        <p>Watch Now</p> 
                     </div>
+                    <p>Did you score? #unblockedgames #school</p>
                 </div>
-                <div class="single-games-box">
+                <div class="single-games-box medium-screen">
                     <img src="images/Rectangle 7.png" alt="">
                     <div class="box-color"></div>
                     <div class="play-btn">
-                        <img src="images/play.png" alt="">
+                        <img src="images/play-button 1.svg" alt="">
                         <p>Watch Now</p>
                     </div>
+                    <p>Breaking game records like OG but you are still lit</p>
                 </div>
-                <div class="single-games-box">
+                <div class="single-games-box medium-screen">
                     <img src="images/Rectangle 6.png" alt="">
                     <div class="box-color"></div>
                     <div class="play-btn">
-                        <img src="images/play.png" alt="">
+                        <img src="images/play-button 1.svg" alt="">
                         <p>Watch Now</p>
                     </div>
+                    <p>Busted gaming on school laptop, but you are still lit.</p>
                 </div>
             </div>
         </section>
-
-
+        <section class="play-instantly">
+            <div class="play-instantly-content">
+                <div class="text-container">
+                 <h1><span class="gradient-color">Play Instantly,</span>No Downloads No Installs.</h1>
+                <p class="instantly-description">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+                </div>
+            </div>
+            <div class="play-instantly-img">
+                <div class="img-1"><img src="images/Rectangle 55.png" alt=""></div>
+                <div class="img-2"><img src="images/Rectangle 66.png" alt=""></div>
+            </div>
+        </section>
+        <section class="game-btn-container">
+            <div class="single-item">
+                <img src="images/Rectangle 11.png" alt="">
+                <p>Action Games</p>
+            </div>
+            <div class="single-item">
+                <img src="images/Rectangle 12.png" alt="">
+                <p>Adventure Games</p>
+            </div>
+            <div class="single-item">
+                <img src="images/Rectangle 13.png" alt="">
+                <p>Arcade Games</p>
+            </div>
+            <div class="single-item">
+                <img src="images/Rectangle 14.png" alt="">
+                <p>Educational Games</p>
+            </div>
+            <div class="single-item">
+                <img src="images/Rectangle 15.png" alt="">
+                <p>Word Games</p>
+            </div>
+            <div class="single-item difference-style">
+                <img src="images/Rectangle 16.png" alt="">
+                <p>Role Palying Games</p>
+            </div>
+            <div class="single-item difference-style">
+                <img src="images/Rectangle 17.png" alt="">
+                <p>Music & Audio Games</p>
+            </div>
+            <div class="single-item difference-style">
+                <img src="images/Rectangle 18.png" alt="">
+                <p>Puzzle Games</p>
+            </div>
+            <div class="single-item difference-style medium-screen-hide">
+                <img src="images/Rectangle 19.png" alt="">
+                <p>Strategy Games</p>
+            </div>
+        </section>
     </main>
-
-    
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-logo">
+                <img src="images/Frame.png" alt="">
+                 <p><span>G</span>amer</p>
+            </div>
+            <div class="footer-menu">
+                <ul>
+                    <li><a href="">Our Story</a></li>
+                    <li><a href="">Games</a></li>
+                    <li><a href="">Web Games</a></li>
+                    <li><a href="">Careers</a></li>
+                    <li><a href="">Support</a></li>
+                    <li><a href="">My Account</a></li>
+                </ul>
+            </div>
+            <div class="footer-img">
+                <p><i class="fa-brands fa-twitter"></i></p>
+                <p><i class="fa-brands fa-facebook"></i></p>
+                <p><i class="fa-brands fa-youtube"></i></p>
+                <p><i class="fa-brands fa-linkedin-in"></i></p>
+                <p><i class="fa-brands fa-instagram"></i></p>
+                <p><i class="fa-brands fa-apple"></i></p>
+            </div>
+            <div class="privarcy-menu">
+                <li><a href="">Terms and Conditions</a></li>
+                <li><a href="">Privacy Policy</a></li>
+                <li><a href="">Cookie Policy</a></li>
+                <li><a href="">privacy setting</a></li>
+            </div>
+            <small>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</small>
+        </div>
+    </footer>
+    <script src="https://kit.fontawesome.com/f2919b262c.js" crossorigin="anonymous"></script>
 </body>
 </html>
