--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </header>
     <!-- main section start -->
     <main>
-        <section class="online-games hide">
+        <section class="online-games ">
             <div class="online-title-text">
                 <h1>Online Games <span class="gradient-color">Funny Videos</span></h1>
                 <p class="primary-p-color">A Collection of Hilarious Videos to Brighten Your Day</p>
@@ -61,39 +61,19 @@
             <div class="online-games-box-container">
                 <div class="single-games-box medium-screen">
                     <img src="images/Rectangle 4.png" alt="">
-                    <div class="box-color"></div>
-                    <div class="play-btn">
-                        <img src="images/play-button 1.svg" alt="">
-                        <p>Watch Now</p>
-                    </div>
                     <p>No Download. No Installs. Play games Instantly on Gamer.</p>
                 </div>
                 <div class="single-games-box medium-screen">
                     <img src="images/Rectangle 5.png" alt="">
-                    <div class="box-color"></div>
-                    <div class="play-btn">
-                        <img src="images/play-button 1.svg" alt="">
-                        <p>Watch Now</p> 
-                    </div>
                     <p>Did you score? #unblockedgames #school</p>
                 </div>
                 <div class="single-games-box medium-screen">
                     <img src="images/Rectangle 7.png" alt="">
-                    <div class="box-color"></div>
-                    <div class="play-btn">
-                        <img src="images/play-button 1.svg" alt="">
-                        <p>Watch Now</p>
-                    </div>
-                    <p>Breaking game records like OG but you are still lit</p>
+                    <p>Breaking game records like OG</p>
                 </div>
                 <div class="single-games-box medium-screen">
                     <img src="images/Rectangle 6.png" alt="">
-                    <div class="box-color"></div>
-                    <div class="play-btn">
-                        <img src="images/play-button 1.svg" alt="">
-                        <p>Watch Now</p>
-                    </div>
-                    <p>Busted gaming on school laptop, but you are still lit.</p>
+                    <p>Breaking game records like OG</p>
                 </div>
             </div>
         </section>
